--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -19,6 +19,11 @@
   }
 
   overflow: hidden;
+  @supports not (overflow: hidden) {
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
+
   border-radius: 2.4rem;
 
   background: var(--background);
@@ -72,7 +77,7 @@
   padding: var(--dashboard-padding);
 
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: minmax(0, 2fr) minmax(0, 1fr) /* 66.666666667% 33.333333333% */;
   grid-template-rows: min-content min-content 1fr;
   gap: 2rem;
 
@@ -86,7 +91,10 @@
   }
 
   @media only screen and (max-width: $bp-small) {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(
+      0,
+      1fr
+    ); // This makes it so that the content in the div cannot blow out the grid item since the min is a definite width even if the max isn't
 
     @supports not (gap: 1px) {
       .content-box:not(:last-child) {
@@ -95,8 +103,12 @@
       }
     }
   }
-
+  /* 
   overflow: hidden; // So that the overflow from the tasks text content doesnt expand the task container squishing everything in the dashboard
+  @supports not (overflow: hidden) {
+    overflow-x: hidden;
+    overflow-y: hidden;
+  } */
 }
 
 .about {
